# GameXO

./: CMakeLists.txt  README.md
GameXO/: CMakeLists.txt  GameXO.cpp  GameXO.h  client.cpp
GameXO/Game/: CMakeLists.txt  Game.cpp  Game.h
GameXO/NetCode/: CMakeLists.txt  Net.cpp  Net.h
GameXO/QueryMaker/: CMakeLists.txt  QueryMaker.cpp  QueryMaker.h
